# aerospike-client-python-sdk

./: .gitignore  .readthedocs.yaml  Makefile  README.md  aerospike.env.example  conftest.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/actions/get-version/: action.yml
.github/workflows/: build-and-deploy.yml  build-release.yaml  build-test.yml  promote-dev-to-stage.yml  promote-stage-to-main.yml  promote-to-prod.yaml  promote-to-stage.yaml  publish-rtd.yaml  publish-rtd.yml  push-to-build.yaml  release.yml
aerospike_sdk/: __init__.py  background_shared.py  error_strategy.py  exceptions.py  exp.py  hll_config.py  index_monitor.py  operation_result.py  operations_shared.py  pac_sdk_client_attr.py  record_result.py  record_stream.py  session_shared.py
aerospike_sdk/ael/: exp_visitor.py  filter_gen.py  parser.py  server_filter.py
aerospike_sdk/ael/antlr4/: Condition.g4
aerospike_sdk/aio/: __init__.py  background.py  client.py  info.py  pool.py  session.py
aerospike_sdk/aio/operations/: batch.py  index.py  query.py  udf.py
aerospike_sdk/policy/: behavior.py  behavior_settings.py  policy_mapper.py
aerospike_sdk/sync/: _threadlocal_client.py  background.py  client.py  cluster.py  info.py  record_stream.py  session.py  transactional_session.py
aerospike_sdk/sync/operations/: batch.py  index.py  query.py  udf.py
benchmarks/: README.md  _env.py  benchmark.py  compare.py  config.py  legacy_benchmark.py  quick_pool_bench.py  run_matrix.sh  run_matrix_psdk.sh  stats.py  workers.py
benchmarks/rust-core/: Cargo.toml  README.md
benchmarks/rust-core/src/: main.rs
docs/: conf.py  index.md
docs/api/: async-pool.md  hll-config.md  index.md  operation-result.md  query.md  string-builder.md  write-segment.md
docs/api/sync/: query.md
docs/guide/: benchmarking.md  expression-ael.md  indexes.md  performance.md  string-ops.md  writes.md
scripts/ci/: build-artifacts.sh
tests/: cluster_version.py  pac_compat.py  version_xfail.py
tests/integration/: conftest.py  sc_namespace_resolve.py
tests/integration/async/: add_test.py  append_test.py  background_task_test.py  batch_test.py  behavior_test.py  cdt_filter_context_test.py  cdt_navigation_test.py  cdt_ordering_test.py  cdt_write_options_test.py  cdt_write_test.py  complex_batch_test.py  conftest.py  delete_bin_test.py  durable_delete_sc_test.py  durable_delete_support.py  error_handling_test.py  exp_test.py  expire_test.py  expression_ops_test.py  generation_test.py  geo_test.py  hll_bit_test.py  hll_test.py  index_monitor_test.py  index_test.py  info_test.py  java_examples_test.py  list_map_test.py  operate_test.py  pool_test.py  put_get_test.py  query_bin_ops_test.py  query_hint_test.py  query_op_projection_test.py  query_policy_fields_test.py  query_test.py  replace_test.py  session_ops_test.py  session_test.py  string_masking_test.py  (+2 more)
tests/integration/sync/: ael_path_read_test.py  background_task_test.py  batch_test.py  cdt_filter_context_test.py  info_test.py  java_examples_test.py  put_get_test.py  txn_test.py  udf_test.py
tests/unit/: async_pool_runtime_config_test.py  async_pool_shared_policy_test.py  async_session_sc_routing_test.py  background_task_test.py  behavior_test.py  benchmarks_tool_test.py  circuit_breaker_test.py  complex_batch_test.py  durable_delete_builder_test.py  durable_delete_resolution_test.py  error_strategy_test.py  exceptions_test.py  expire_record_at_test.py  expression_ops_test.py  geo_builder_test.py  hll_bit_builder_test.py  hll_builder_test.py  hll_config_test.py  index_monitor_test.py  list_index_ops_builder_test.py  native_expops_test.py  op_projection_test.py  operation_result_test.py  policy_mapper_test.py  query_bin_ops_test.py  query_hint_test.py  query_where_test.py  record_result_test.py  record_stream_test.py  string_ops_builder_test.py  sync_batch_test.py  sync_client_inheritance_test.py  sync_no_asyncio_invariant_test.py  sync_transactional_session_test.py  system_settings_test.py  transactional_session_test.py  txn_threading_test.py  udf_test.py
tests/unit/ael/: test_server_filter.py
tests/unit/aio/: test_client_pac_version_compat.py
tests/unit/dsl/: index_set_test.py
tests/unit/dsl/expression/: arithmetic_expressions_test.py  bin_naming_test.py  exists_function_test.py  geo_expressions_test.py  hll_expressions_test.py  map_expressions_test.py  map_key_typing_test.py  unknown_expression_test.py
tests/unit/dsl/parsed_expression/: query_set_parsed_expression_test.py
