[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike-sdk"
dynamic = ["version"]
description = "Aerospike Python SDK - a modern, developer-friendly interface for Aerospike"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    #"aerospike-async==0.5.0a1",
    "aerospike-async @ git+ssh://git@github.com/aerospike/aerospike-client-python-async.git@v0.5.0-alpha.1",
    "antlr4-python3-runtime>=4.13.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://aerospike.com/docs/develop/client/sdk/"
"API Reference" = "https://aerospike-python-sdk.readthedocs.io/"
Repository = "https://github.com/aerospike/aerospike-client-python-sdk"
Issues = "https://github.com/aerospike/aerospike-client-python-sdk/issues"
Changelog = "https://github.com/aerospike/aerospike-client-python-sdk/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-env>=1.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "antlr4-python3-runtime>=4.13.0",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser>=4.0",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["aerospike_sdk*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Module-scoped fixtures (e.g. the IndexesMonitor task on the SDK Client) must
# share a single event loop with the tests that use them; otherwise the
# monitor's background ``asyncio.sleep`` is starved while a function-scoped
# test loop runs and the cache never refreshes.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
addopts = "-s"
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"
filterwarnings = [
    "ignore::DeprecationWarning:uvloop",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.basedpyright]
reportMissingImports = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

