[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike-sdk"
dynamic = ["version"]
description = "Aerospike Python SDK — high-level API on the Aerospike Python Async Client"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aerospike-client-python-async @ git+ssh://git@github.com/aerospike/aerospike-client-python-async.git@v0.3.0-alpha.16",
    "antlr4-python3-runtime>=4.13.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-env>=1.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "antlr4-python3-runtime>=4.13.0",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser>=4.0",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["aerospike_sdk*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s"
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "WARNING"
filterwarnings = [
    "ignore::DeprecationWarning:uvloop",
]

[tool.basedpyright]
reportMissingImports = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

